force-app/main/default/objects/AssesObj__c/AssesObj__c.object-meta.xml
<CustomObject>
    <label>AssesObj</label>
    <nameField>
        <label>AssesObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AssesObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>