force-app/main/default/objects/AssesObj__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kadapa</fullName>
            </value>
            <value>
                <fullName>Ananthapur</fullName>
            </value>
            <value>
                <fullName>Kurnool</fullName>
            </value>
            <value>
                <fullName>Vizag</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
            <value>
                <fullName>Belagavi</fullName>
            </value>
            <value>
                <fullName>Kolar</fullName>
            </value>
            <value>
                <fullName>Koppal</fullName>
            </value>
            <value>
                <fullName>Dharmapuri</fullName>
            </value>
            <value>
                <fullName>madhurai</fullName>
            </value>
            <value>
                <fullName>Mumbai city</fullName>
            </value>
            <value>
                <fullName>pune</fullName>
            </value>
            <value>
                <fullName>palakkad</fullName>
            </value>
            <value>
                <fullName>idukki</fullName>
            </value>
            <value>
                <fullName>Rajkot</fullName>
            </value>
            <value>
                <fullName>surat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>