force-app/main/default/objects/AssesObj__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>CASE(Place__c ,
&quot;Chittoor&quot;,  IMAGE(&quot;/sfc/servlet.shepherd/version/Download/0680o000005TkrW&quot;,&quot;chittoor&quot;,25,25),
&quot;Kadapa&quot;,  IMAGE(&quot;/sfc/servlet.shepherd/version/Download/0680o000005Tkrb&quot;,&quot;chittoor&quot;,25,25),
&quot;Kurnool&quot;,  IMAGE(&quot;/sfc/servlet.shepherd/version/Download/0680o000005Tkrg&quot;,&quot;chittoor&quot;,25,25),
&quot;Vijayawada&quot;,  IMAGE(&quot;/sfc/servlet.shepherd/version/Download/0680o000005TkrY&quot;,&quot;chittoor&quot;,25,25),
&quot;Rajamandry&quot;,IMAGE(&quot;/sfc/servlet.shepherd/version/Download/0680o000005TkrX&quot;,&quot;rajamandry&quot;,35,25),
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>