force-app/main/default/objects/AssesObj__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>