force-app/main/default/objects/AssesObj__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>Place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kadapa</fullName>
            </value>
            <value>
                <fullName>Kurnool</fullName>
            </value>
            <value>
                <fullName>Chittoor</fullName>
            </value>
            <value>
                <fullName>Vijayawada</fullName>
            </value>
            <value>
                <fullName>Rajamandry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>