force-app/main/default/objects/AssesObj__c/fields/Relation_With_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Relation_With_Contact_Person__c</fullName>
    <label>Relation With Contact Person</label>
    <length>15</length>
    <type>Text</type>
</CustomField>