force-app/main/default/objects/AssesObj__c/recordTypes/Graduation.recordType-meta.xml
<RecordType>
    <fullName>Graduation</fullName>
    <active>true</active>
    <label>Graduation</label>
</RecordType>