force-app/main/default/objects/AssesObj__c/recordTypes/PUC.recordType-meta.xml
<RecordType>
    <fullName>PUC</fullName>
    <active>true</active>
    <label>PUC</label>
</RecordType>